--- a/DAY5/javascript.html
+++ b/DAY5/javascript.html
@@ -3,5 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>filpkart-style demo-E-shop </title>
-    <link rel="stylesheet" href="">
+    <title>Document</title>
+</head>
+<body>
+    <script>
+        c
+    </script>
+    
+</body>
+</html>
