--- a/TASK/q5.html
+++ b/TASK/q5.html
@@ -10,8 +10,8 @@
         let r = prompt("Enter the radius :");
         let v = (4/3) * (22/7) * (r * r * r);
         let a = 4 * (22/7) * (r * r);
-        document.write("The volume of the sphere is: " + v +"<br>");   
-        document.write("The area of the sphere is: " + a);
+        console.log("The volume of the sphere is: " + v +"<br>");   
+        console.log("The area of the sphere is: " + a);
     </script>
 </body>
 </html>
